# Gain

./: .gitignore  CMakeLists.txt
src/: GainEditor.cpp  GainEditor.h  GainProcessor.cpp  GainProcessor.h
